Fix header buttons font-size on tablet-down

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -90,8 +90,11 @@
       justify-content: center
       align-items: center
 
-    &__nav_item
-      color: $colorWhite
+    &__nav
+      +font-size-block($sizeNormal3)
+
+      &_item
+        color: $colorWhite
 
     &__logo
       transform-origin: center
